--- a/hermes_client/styles/globals.css
+++ b/hermes_client/styles/globals.css
@@ -1,5 +1,13 @@
+:root {
+  --primary: #000000;
+  --secondary: #1f1f1f;
+  --purple: #bb86fc;
+}
+
 html,
 body {
+  background-color: var(--primary);
+  color: white;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
