Added styling to chat rooms and added array push functionality to see messages a user types out

--- a/hermes_client/components/Header/header.module.css
+++ b/hermes_client/components/Header/header.module.css
@@ -24,3 +24,9 @@
     cursor:pointer;
     text-align: right;
 }
+
+@media(min-width:1024px){
+    .header_container{
+        padding:0 3%;
+    }
+}
