--- a/hermes_client/styles/globals.css
+++ b/hermes_client/styles/globals.css
@@ -14,11 +14,17 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+input:focus, textarea:focus, select:focus{
+  outline: none;
 }
 
-* {
-  box-sizing: border-box;
+textarea{
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+button{
+  background-color: var(--purple);
+  color:white;
+  border-radius: 15px;
+  border:none;
 }
