--- a/hermes_client/components/HeaderMenu/header_menu.module.css
+++ b/hermes_client/components/HeaderMenu/header_menu.module.css
@@ -15,6 +15,22 @@
     cursor:none;
 }
 
+.custom_name_container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.custom_name_container input{
+    background-color: var(--secondary);
+    border:none;
+    border-bottom: 1px solid white;
+    color: white;
+}
+
+.custom_name_container button{
+    width:75px;
+}
+
 @media(min-width:1024px){
     .header_menu_container{
         padding:1% 3%;
